completed js and added css

--- a/index.html
+++ b/index.html
@@ -4,8 +4,17 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Grocery Buds</title>
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <h1>hello Grocery Buds</h1>
+    <main>
+      <h1>Grocery Buds</h1>
+      <div class="inputField">
+        <input type="text" name="text" id="textInput" />
+        <button type="button" id="addBtn">Add</button>
+      </div>
+      <div class="listDiv"></div>
+    </main>
+    <script src="app.js"></script>
   </body>
 </html>
