--- a/index.html
+++ b/index.html
@@ -15,6 +15,6 @@
       </div>
       <div class="listDiv"></div>
     </main>
-    <script src="app.js"></script>
+    <script type="module" src="app.js"></script>
   </body>
 </html>
